tests/baselines/reference/class1.errors.txt
==== tests/cases/compiler/class1.ts (1 errors) ====
    interface foo{ }
    class foo{ }
          ~~~
!!! class1.ts(2,7): error TS2000: Duplicate identifier 'foo'. Additional locations:
!!! 	class1.ts(1,1)